--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                 <article class="article-mid">
                     <h3>Central de Atendimento</h3>
                     <div class="cards">
-                        <img src="./assets/icons/phone.svg" alt="imagem-phone">
+                        <i class="bx bx-phone cards-img green"></i>
                         <div class="cards-content">
                             <p>Ligação gratuita</p>
                             <spam>0800 00012</spam>
@@ -64,7 +64,7 @@
                     </div>
 
                     <div class="cards">
-                        <img src="./assets/icons/phone.svg" alt="imagem-phone">
+                        <i class="bx bx-support cards-img green"></i>
                         <div class="cards-content">
                             <p>Atendimento</p>
                             <spam>11 2100 0102</spam>
@@ -72,7 +72,7 @@
                     </div>
 
                     <div class="cards">
-                        <img src="./assets/icons/mail.svg" alt="imagem-email">
+                        <i class="bx bx-phone-call cards-img green"></i>
                         <div class="cards-content">
                             <p>Ligação gratuita</p>
                             <spam>0800 00012</spam>
