modifed textarea style.css

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                         <input type="tel" name="Telefone" placeholder="Telefone Fixo, Celular ou WhatsApp">
                         <input type="text" name="Assunto" placeholder="Assunto">
                         <input type="text" name="Financeiro" placeholder="Financeiro">
-                        <textarea>Mensagem</textarea>
+                        <textarea placeholder="Mensagem"></textarea>
                         <button type="submit">Enviar</button>
                     </form>
                 </article>
